Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Ali Khalili's Github page</title>
+    <title>ali1k.github.io by ali1k</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -17,8 +17,9 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to My GitHub Page.</h3>
-<p> See <a href="http://ali1k.com"> http://ali1k.com</a></p>
+<a id="welcome-to-my-github-page" class="anchor" href="#welcome-to-my-github-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to My GitHub Page...</h3>
+
+<p>I am Ali Khalili. See more info at <a href="http://ali1k.com">http://ali1k.com</a></p>
 
       <footer class="site-footer">
 
